[package]
name = "ping-rs"
authors = ["Ruxo Zheng <me@ruxoz.net>"]
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Provide ICMP Echo (ping) functionality for both Windows and Linux"
documentation = "https://docs.rs/ping-rs/"
homepage = "https://docs.rs/ping-rs/"
repository = "https://github.com/ruxo/ping-rs"

[dependencies]
futures = "0.3"

[target.'cfg(unix)'.dependencies]
mio = { version = "0.8", features = ["os-poll", "os-ext", "net"] }
socket2 = { version = "0.4", features = ["all"] }
paste = "1"

[target.'cfg(windows)'.dependencies.windows]
version = "0.43"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
]